# shrinkray

./: .flake8  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  badtest.sh  justfile  noxfile.py  pyproject.toml  pytest.ini
.claude/: reliability-config.yaml  settings.json
.claude/commands/: checkpoint.md  self-review.md  test-wrangle.md
.github/: FUNDING.yml
.github/workflows/: auto-release.yml  ci.yml  pages.yml
gallery/enterprise-hello/: hello.py  hello.tape  ishello.sh
notes/: core-abstractions.md  import-graph.dot  import-graph.md  no-caching.md  parallelism-model.md  parallelism.md  patching-system.md  pumps-and-passes.md  reduction-passes.md
scripts/: autonomous  check_dead_code.py  check_import_cycles.py  extra_lints.py  fix_function_imports.py  release.py  sample-tests.py  update_gallery.py  update_import_graph.py
src/shrink_ray/: __main__.py
src/shrinkray/: __init__.py  __main__.py  cli.py  display.py  formatting.py  history.py  problem.py  process.py  reducer.py  state.py  tui.py  ui.py  validation.py  work.py
src/shrinkray/passes/: __init__.py  bytes.py  clangdelta.py  definitions.py  genericlanguages.py  json.py  patching.py  python.py  sat.py  sequences.py  strings.py
src/shrinkray/subprocess/: __init__.py  client.py  protocol.py  worker.py
tests/: __init__.py  conftest.py  helpers.py  pytest_textual_snapshot.py  test_byte_reduction_passes.py  test_clang_delta.py  test_cli.py  test_definitions.py  test_dimacs_cnf.py  test_display.py  test_formatting.py  test_generic_language.py  test_generic_shrinking_properties.py  test_history.py  test_json_passes.py  test_main.py  test_misc_reduction_performance.py  test_natural_sort_orders.py  test_patching.py  test_problem.py  test_process.py  test_python_reducers.py  test_reducer.py  test_reduction_passes.py  test_sat.py  test_state.py  test_subprocess_client.py  test_subprocess_integration.py  test_subprocess_protocol.py  test_subprocess_worker.py  test_tui.py  test_tui_snapshots.py  test_ui.py  test_validation.py  test_work.py
tests/__snapshots__/test_tui_snapshots/: TestTUISnapshots.test_hex_mode.raw  TestTUISnapshots.test_initial_state.raw  TestTUISnapshots.test_large_file.raw  TestTUISnapshots.test_mid_reduction.raw  TestTUISnapshots.test_small_terminal.raw  TestTUISnapshots.test_wide_terminal.raw  test_large_file.raw  test_pass_stats_modal.raw  test_small_terminal.raw  test_wide_terminal.raw
tests/resources/: snapshot_report_template.jinja2
