[project]
name = "shrinkray"
version = "25.9.1"
description = "Shrink Ray"
authors = [
    {name = "David R. MacIver", email = "david@drmaciver.com"}
]
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.1",
    "chardet>=5.2.0",
    "trio>=0.28.0",
    "textual>=0.47.0",
    "humanize>=4.9.0",
    "libcst>=1.1.0",
    "exceptiongroup>=1.2.0",
    "binaryornot>=0.4.4",
]

[project.urls]
Homepage = "https://github.com/DRMacIver/shrinkray"
Repository = "https://github.com/DRMacIver/shrinkray"
Documentation = "https://shrinkray.readthedocs.io"
Changelog = "https://github.com/DRMacIver/shrinkray/releases"

[project.scripts]
shrinkray = "shrinkray.__main__:main"
shrinkray-worker = "shrinkray.__main__:worker_main"

[project.optional-dependencies]
dev = [
    "hypothesis>=6.92.1",
    "hypothesmith>=0.3.1",
    "pytest",
    "pytest-trio",
    "pytest-asyncio",
    "pytest-textual-snapshot",
    "coverage[toml]",
    "pygments",
    "basedpyright",
    "flake8",
    "flake8-bugbear",
    "flake8-trio",
    "black",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["shrinkray", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = false
lines_after_imports = 2

[tool.basedpyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
