[project]
name = "shrinkray"
version = "25.9.1"
description = "Shrink Ray"
authors = [
    {name = "David R. MacIver", email = "david@drmaciver.com"}
]
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.1",
    "chardet>=5.2.0",
    "trio>=0.28.0",
    "textual>=0.47.0",
    "humanize>=4.9.0",
    "libcst>=1.1.0",
    "exceptiongroup>=1.2.0",
    "binaryornot>=0.4.4",
    "black",
]

[project.urls]
Homepage = "https://github.com/DRMacIver/shrinkray"
Repository = "https://github.com/DRMacIver/shrinkray"
Documentation = "https://shrinkray.readthedocs.io"
Changelog = "https://github.com/DRMacIver/shrinkray/releases"

[project.scripts]
shrinkray = "shrinkray.__main__:main"
shrinkray-worker = "shrinkray.__main__:worker_main"

[project.optional-dependencies]
dev = [
    "hypothesis>=6.92.1",
    "hypothesmith>=0.3.1",
    "pytest",
    "pytest-trio",
    "pytest-asyncio",
    "pytest-textual-snapshot",
    "coverage[toml]",
    "pygments",
    "basedpyright",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["shrinkray"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = [
    "E501",  # line too long - handled by formatter
    "B007",  # unused loop variable
    "B023",  # function definition in loop
    "B904",  # raise without from - intentional in some exception handling
    "C408",  # unnecessary dict() call - sometimes more readable
    "UP031", # use format specifiers - % format is fine
    "B018",  # useless expression - sometimes intentional for side effects
    "C403",  # unnecessary list comprehension - sometimes more readable
    "UP022", # prefer capture_output - explicit is fine
]

[tool.ruff.lint.isort]
force-single-line = false
lines-after-imports = 2

[tool.basedpyright]
include = ["src", "tests"]
exclude = ["build", "bugs", ".venv", ".venv2"]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
# These are too noisy with third-party libraries that lack type stubs
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportMissingParameterType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
# These are often false positives or stylistic
reportUnusedFunction = false
reportMissingTypeArgument = false
reportPrivateUsage = false  # Tests need to access private attributes
reportIncompatibleMethodOverride = false  # Often false positives with textual
reportUnnecessaryIsInstance = false  # Needed for runtime type checking of untrusted input

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
